--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-  <%= flash.each do |name, msg| %>
+  <% flash.each do |name, msg| %>
     <%= msg %>
   <% end %>
     <%= yield %>
