--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
 <h1>This is the About page</h1>
+
+<p><%= link_to 'Articles listing', articles_path %> | <p><%= link_to 'Home page', route_path %></p></p>
