--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,3 @@
 <h1>This is the Home page</h1>
+
+<p><%= link_to 'Articles listing', articles_path %> | <p><%= link_to 'About page', about_path %></p></p>
